# nebari-jupyterlite-plugin

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  docker.yml  release.yml
docker/: Dockerfile  entrypoint.sh  generate_index.py  nginx.conf  pixi.toml
src/nebari_jupyterlite_plugin/: __init__.py
src/nebari_jupyterlite_plugin/template/local/: build-config  main.tf  variables.tf  versions.tf
src/nebari_jupyterlite_plugin/template/local/scripts/: build-content.sh  generate_index.py
